--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -10,9 +10,12 @@ set(LLVM_LINK_COMPONENTS
 if ("LLVMFrontendDriver" IN_LIST LLVM_AVAILABLE_LIBS)
   list(APPEND LLVM_LINK_COMPONENTS  FrontendDriver)
 endif()
-if ("LLVMOrcDebugging" IN_LIST LLVM_AVAILABLE_LIBS)
-  list(APPEND LLVM_LINK_COMPONENTS OrcDebugging)
-endif()
+
+if (USE_REPL)
+  if ("LLVMOrcDebugging" IN_LIST LLVM_AVAILABLE_LIBS)
+    list(APPEND LLVM_LINK_COMPONENTS OrcDebugging)
+  endif()
+if (USE_REPL)
 
 set(DLM
   DynamicLibraryManager.cpp
