--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -366,6 +366,13 @@ jobs:
           git clone https://github.com/root-project/cling.git
           cd ./cling 
           git checkout tags/v${{ matrix.cling-version }}
+          # Apply patches
+          llvm_vers=$(echo "${{ matrix.clang-runtime }}" | tr '[:lower:]' '[:upper:]')
+          if [[ "${llvm_vers}" == "16" ]]; then
+            # cling version 1.1 with llvm 16 requires a patch to fix error handling when parsing invaild code
+            git apply -v ../patches/llvm/cling${{ matrix.clang-runtime }}-*.patch
+            echo "Apply cling${{ matrix.clang-runtime }}-*.patch patches:"
+          fi
           cd ..
           git clone --depth=1 -b cling-llvm${{ matrix.clang-runtime }} https://github.com/root-project/llvm-project.git
         else # repl
@@ -435,6 +442,11 @@ jobs:
           git clone https://github.com/root-project/cling.git
           cd ./cling 
           git checkout tags/v${{ matrix.cling-version }}
+          if ( "${{ matrix.clang-runtime }}" -imatch "16" )
+          {
+            # cling version 1.1 with llvm 16 requires a patch to fix error handling when parsing invaild code
+            git apply -v clang16-1-Error-Handling.patch
+          }
           cd ..
           git clone --depth=1 -b cling-llvm${{ matrix.clang-runtime }} https://github.com/root-project/llvm-project.git
           $env:PWD_DIR= $PWD.Path
@@ -558,13 +570,13 @@ jobs:
             clang-runtime: '16'
             cling: Off
             cppyy: Off
-          - name: ubu22-x86-gcc9-clang16-cling-cppyy
+          - name: ubu22-x86-gcc9-clang16-cling
             os: ubuntu-22.04
             compiler: gcc-12
             clang-runtime: '16'
             cling: On
             cling-version: '1.1'
-            cppyy: On
+            cppyy: Off
           #FIXME: Windows CppInterOp tests expected to fail
           #until https://github.com/compiler-research/CppInterOp/issues/188 is solved
           - name: win2022-msvc-clang-repl-19
@@ -615,13 +627,13 @@ jobs:
             clang-runtime: '16'
             cling: Off
             cppyy: Off
-          - name: osx14-arm-clang-clang16-cling-cppyy
+          - name: osx14-arm-clang-clang16-cling
             os: macos-14
             compiler: clang
             clang-runtime: '16'
             cling: On
             cling-version: '1.1'
-            cppyy: On
+            cppyy: Off
           - name: osx13-x86-clang-clang-repl-19-cppyy
             os: macos-13
             compiler: clang
@@ -646,13 +658,13 @@ jobs:
             clang-runtime: '16'
             cling: Off
             cppyy: Off
-          - name: osx13-x86-clang-clang16-cling-cppyy
+          - name: osx13-x86-clang-clang16-cling
             os: macos-13
             compiler: clang
             clang-runtime: '16'
             cling: On
             cling-version: '1.1'
-            cppyy: On
+            cppyy: Off
 
     steps:
     - uses: actions/checkout@v4
