--- a/.github/workflows/stale-pr-and-issues.yml
+++ b/.github/workflows/stale-pr-and-issues.yml
@@ -19,7 +19,7 @@ jobs:
           close-issue-message: "This issue was closed because it has been inactive for 14 days since being marked as stale."
           days-before-pr-stale: 90
           days-before-pr-close: 14
-          stale-issue-label: "stale"
-          stale-issue-message: "This PR is stale because it has been open for 90 days with no activity."
-          close-issue-message: "This PR was closed because it has been inactive for 14 days since being marked as stale."
+          stale-pr-label: "stale"
+          stale-pr-message: "This PR is stale because it has been open for 90 days with no activity."
+          close-pr-message: "This PR was closed because it has been inactive for 14 days since being marked as stale."
           repo-token: ${{ secrets.GITHUB_TOKEN }}
