--- a/.github/workflows/stale-pr-and-issues.yml
+++ b/.github/workflows/stale-pr-and-issues.yml
@@ -1,4 +1,4 @@
-name: Close inactive issues
+name: Close inactive issues and PRs
 on:
   schedule:
     - cron: "30 1 * * *"
@@ -17,9 +17,11 @@ jobs:
           stale-issue-label: "stale"
           stale-issue-message: "This issue is stale because it has been open for 90 days with no activity."
           close-issue-message: "This issue was closed because it has been inactive for 14 days since being marked as stale."
+          exempt-issue-labels: 'to-fix'
           days-before-pr-stale: 90
           days-before-pr-close: 14
           stale-pr-label: "stale"
           stale-pr-message: "This PR is stale because it has been open for 90 days with no activity."
           close-pr-message: "This PR was closed because it has been inactive for 14 days since being marked as stale."
+          exempt-pr-labels: 'awaiting-approval,work-in-progress'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
