make suggested change and expose cppinterop version

--- a/cmake/CppInterOp/CppInterOpConfig.cmake.in
+++ b/cmake/CppInterOp/CppInterOpConfig.cmake.in
@@ -46,7 +46,8 @@ set(CPPINTEROP_LLVM_VERSION_MAJOR "@LLVM_VERSION_MAJOR@")
 set(CPPINTEROP_LLVM_VERSION_MINOR "@LLVM_VERSION_MINOR@")
 set(CPPINTEROP_LLVM_VERSION_PATCH "@LLVM_VERSION_PATCH@")
 set(CPPINTEROP_LLVM_VERSION_SUFFIX "@LLVM_VERSION_SUFFIX@")
-set(CPPINTEROP_LLVM_PACKAGE_VERSION "@CPPINTEROP_VERSION@")
+set(CPPINTEROP_LLVM_PACKAGE_VERSION "@CPPINTEROP_LLVM_VERSION@")
+set(CPPINTEROP_VERSION "@CPPINTEROP_VERSION@")
 
 # Provide all our library targets to users.
 if (@BUILD_SHARED_LIBS@)
