--- a/.github/workflows/non-emscripten.yml
+++ b/.github/workflows/non-emscripten.yml
@@ -62,6 +62,15 @@ jobs:
             cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+          - name: ubu22-x86-gcc9-clang13-cling
+            os: ubuntu-22.04
+            compiler: gcc-9
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
           - name: win2022-msvc-clang-repl-19
             os: windows-2022
             compiler: msvc
@@ -127,6 +136,15 @@ jobs:
             cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+          - name: osx15-arm-clang-clang13-cling
+            os: macos-15
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
           - name: osx13-x86-clang-clang-repl-19
             os: macos-13
             compiler: clang
@@ -165,6 +183,15 @@ jobs:
             clang-runtime: '16'
             cling: On
             cling-version: '1.1'
+            cppyy: On
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
+          - name: osx13-x86-clang-clang13-cling
+            os: macos-13
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
             cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
@@ -620,6 +647,13 @@ jobs:
             cling: On
             cling-version: '1.1'
             cppyy: Off
+          - name: ubu22-x86-gcc9-clang13-cling
+            os: ubuntu-22.04
+            compiler: gcc-9
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
           #FIXME: Windows CppInterOp tests expected to fail
           #until https://github.com/compiler-research/CppInterOp/issues/188 is solved
           - name: win2022-msvc-clang-repl-19
@@ -677,6 +711,13 @@ jobs:
             cling: On
             cling-version: '1.1'
             cppyy: Off
+          - name: osx15-arm-clang-clang13-cling-cppyy
+            os: macos-15
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
           - name: osx13-x86-clang-clang-repl-19-cppyy
             os: macos-13
             compiler: clang
@@ -707,6 +748,13 @@ jobs:
             clang-runtime: '16'
             cling: On
             cling-version: '1.1'
+            cppyy: Off
+          - name: osx13-x86-clang-clang13-cling
+            os: macos-13
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
             cppyy: Off
 
     steps:
