--- a/.github/workflows/rtd-preview.yml
+++ b/.github/workflows/rtd-preview.yml
@@ -7,7 +7,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  binder:
+  rtd-preview:
     runs-on: ubuntu-latest
     steps:
       - name: Comment on the PR with the RTD preview
