--- a/.github/workflows/rtd-preview.yml
+++ b/.github/workflows/rtd-preview.yml
@@ -13,7 +13,7 @@ concurrency:
     
 jobs:
   rtd-preview:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Comment on the PR with the RTD preview
         uses: actions/github-script@v7
