--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -442,9 +442,9 @@ jobs:
         cd ../
         rm -rf $(find . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
         cd ./llvm/
-        rm -rf $(find . -maxdepth 1 ! -name "include" ! -name "lib" ! -name ".")
+        rm -rf $(find . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake"  ! -name ".")
         cd ../clang/
-        rm -rf $(find . -maxdepth 1 ! -name "include" ! -name "lib" ! -name ".")
+        rm -rf $(find . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake"  ! -name ".")
         cd ../..
 
     - name: Build LLVM/Cling on Windows systems if the cache is invalid
