Reduce cache size (#386)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -441,7 +441,11 @@ jobs:
         fi
         cd ../
         rm -rf $(find . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
-        cd ../
+        cd ./llvm/
+        rm -rf $(find . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake"  ! -name ".")
+        cd ../clang/
+        rm -rf $(find . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake"  ! -name ".")
+        cd ../..
 
     - name: Build LLVM/Cling on Windows systems if the cache is invalid
       if: ${{ runner.os == 'windows' && steps.cache.outputs.cache-hit != 'true' }}
@@ -520,7 +524,11 @@ jobs:
         }
         cd ..\
         rm -r -force $(find.exe . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
-        cd ..\        
+        cd .\llvm\
+        rm -r -force $(find.exe . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake" ! -name ".")
+        cd ..\clang\
+        rm -r -force $(find.exe . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake"  ! -name ".")
+        cd ..\..     
 
     - name: Save Cache LLVM/Clang runtime build directory
       uses: actions/cache/save@v4
